# phd-thesis

./: .gitignore  .latexmkrc  find_bib_duplicates.rb  front.tex  misc0.sty  my-acronyms.sty  my-acronyms.tex  myacronyms.sty  notes.sty  phd-thesis.bib  phd-thesis.sty  phd-thesis.tex  pyproject.toml
algorithms/: active-learning-el-terminologies.tex  merge-phase.tex  population-phase.tex  redistribution-phase.tex  relation-phase.tex  wdi.tex  wdp.tex  weo.tex
chapters/: chapter_10_autonomous_learning_systems.tex  chapter_10_conclusions.tex  chapter_11_conclusions.tex  chapter_1_introduction.tex  chapter_2_artificial_intelligent_systems.tex  chapter_2_intelligent_systems.tex  chapter_3_artificial_intelligence.tex  chapter_3_neuro_symbolic.tex  chapter_4_neuro_symbolic.tex  chapter_4_ski_methods.tex  chapter_5_llm.tex  chapter_5_psyki.tex  chapter_6_common_patterns.tex  chapter_6_fairness.tex  chapter_6_ski_methods.tex  chapter_7_nesy_applications.tex  chapter_7_psyki.tex  chapter_8_autonomous_learning_systems.tex  chapter_8_fairness.tex  chapter_8_nesy_applications.tex  chapter_9_autonomous_learning_systems.tex  chapter_9_conclusions.tex  chapter_9_nesy_applications.tex  old_chapter_3_artificial_intelligence.tex  old_chapter_5_llm.tex
figures/: ai-map2.eps  architectures.tex  ast-flush-1.graphml  ast-flush-2.graphml  ast-kill.tex  ast-kins.tex  ast.tex  knowledge-workflow-psyki.graphml  net-flush.graphml  neurons.graphml  protocol-sequence-diagrams.tex  psyki-workflow.graphml  robustness-results.tex  workflow-constraining.graphml  workflow-embedding.graphml  (+1 more)
(+33 files in other folders)
