[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Matteo Magnini <matteo.magnini@unibo.it>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
